tests/parsing-test/test_out/attributes.txt
error: scope item not found
 --> attributes/root.ctl:1:35
  |
1 | #[macro swap] ; enum Swap { Two : TwoTokens ; Last : LastToken ; Empty ; } ;
  |                                   ^^^^^^^^^ this does not exist or is not imported
  |
  = help: expected type or module
  = info: debug: queried 'TwoTokens'

error: scope item not found
 --> attributes/root.ctl:1:54
  |
1 | #[macro swap] ; enum Swap { Two : TwoTokens ; Last : LastToken ; Empty ; } ;
  |                                                      ^^^^^^^^^ this does not exist or is not imported
  |
  = help: expected type or module
  = info: debug: queried 'LastToken'

info: formatted:
 #[macro swap]

enum Swap {
	Two: TwoTokens
	Last: LastToken
	Empty
}

